# cp-experimental

./: .gitignore  CMakeLists.txt  README.md  cmake-vs.cmd  cura-plain.code-workspace  launch-pad.code-workspace  make-vcprj.cmd  winres.rc
cmake/: misc.cmake  pch.cmake
cmutual/: CMakeLists.txt  stdafx.h  trace-it.cpp  trace-it.h  win-imp-exp.h
cura-plain-ui/: CMakeLists.txt  cura-plain-app.c  cura-plain-settings.c  cura-plain-settings.h  cura-plain-settings.json  filemanip.c  filemanip.h  glaunch-pad.h  gmain-win.c  grect.c  grect.h  gsettings.c  main.c
launch-pad/: CMakeLists.txt  appconfig.c  appconfig.h  cube-plain.scad  cube-plain.stl  dbg-trace.h  filemanip.c  filemanip.h  gfile-stl.c  gfile-stl.h  glaunch-pad.c  glaunch-pad.h  glog-box.c  glog-box.h  glp-vertex.glsl  gmain-win.c  gmain-win.h  gmesh.c  gmesh.h  gmodel-view.c  gmodel-view.h  grect.c  gsettings.c  launch-pad-menu.ui  launch-pad-resources.c  launch-pad-resources.h  launch-pad.gresource.xml  launch-pad.gschema.xml  launch-pad.ui  loadstl.c  loadstl.h  logbox.c  logbox.h  main.c  mainview.c  mainwin.c  mesh.c  mesh.h  misc.c  scene.scad  (+6 more)
launch-pad-gtk/: CMakeLists.txt  app.c  appconfig.c  filemanip.c  launch-pad.gresource.xml  loadstl.c  loadstl.h  logbox.h  mainview.c  mainview.h  mainwin.c  mainwin.h  mesh.c  mesh.h  misc.c  scene.scad  scene.stl  strmanip.c  temp.cxx  winres.rc
launch-pad-qt/: CMakeLists.txt  app.cpp  app.h  logbox.cpp  logbox.h  logbox.ui  main.cpp  qres.qrc  stdafx.h  viewmain.cpp  viewmain.h  winmain.cpp  winmain.h  winmain.ui  winres.rc
resources/: initial-scene.scad  initial-scene.stl  winmanifest.xml
temp/glarea-example-master/: glarea-app-window.ui
temp/pygpufractal-master/: gtkfractal.py
twins-second/: CMakeLists.txt  main-twins-second.cpp  stdafx.h
twins2/: CMakeLists.txt  main-twins-second.cpp  winres.rc
